@@ -1,8 +1,9 @@
 package com.jammy.services;
 
+import com.jammy.entities.GenreEntity;
+import com.jammy.entities.InstrumentEntity;
 import com.jammy.entities.ProfileEntity;
-import com.jammy.entities.ProfileGenreEntity;
-import com.jammy.entities.ProfileInstrumentEntity;
+import com.jammy.models.Filter;
 import com.jammy.models.Genre;
 import com.jammy.models.Instrument;
 import com.jammy.models.Profile;
@@ -15,6 +16,7 @@ import org.hibernate.exception.DataException;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -24,9 +26,57 @@ public class ProfileService {
     private ProfileRepository profileRepository;
     private ProfileGenreRepository profileGenreRepository;
     private ProfileInstrumentRepository profileInstrumentRepository;
+    private MatchCheckerService matchCheckerService;
 
     public Profile createProfile(Profile profile) {
-        var entity = new ProfileEntity(
+        var entity = businessModelToEntity(profile);
+        var savedEntity = profileRepository.save(entity);
+        var savedProfile = entityToBusinessModel(savedEntity);
+        matchCheckerService.checkMatchesForProfile(savedProfile);
+        return savedProfile;
+    }
+
+    public Profile getProfile(UUID id) throws DataException {
+        var entity = profileRepository.findById(id).get();
+        return entityToBusinessModel(entity);
+    }
+
+    @Transactional
+    public Profile updateProfile(UUID id, Profile profile) {
+//        profileGenreRepository.deleteByProfileId(id);
+//        profileInstrumentRepository.deleteByProfileId(id);
+
+        var entity = profileRepository.findById(id).orElseThrow();
+        entity.setEmail(profile.getEmail());
+        entity.setName(profile.getName());
+        entity.setAge(profile.getAge());
+        entity.setBio(profile.getBio());
+        entity.setLocation(profile.getLocation());
+        entity.setAvatarUrl(profile.getAvatarUrl());
+        entity.setGenres(profile.getGenres().stream().map(it -> new GenreEntity(it.name())).collect(Collectors.toCollection(ArrayList::new)));
+        entity.setInstruments(profile.getInstruments().stream().map(it -> new InstrumentEntity(it.name())).collect(Collectors.toCollection(ArrayList::new)));
+
+        var savedEntity = profileRepository.save(entity);
+        var savedProfile = entityToBusinessModel(savedEntity);
+        matchCheckerService.checkMatchesForProfile(profile);
+        return savedProfile;
+    }
+
+    @Transactional
+    public List<Profile> search(Filter filter) {
+        var profileEntities = profileRepository.search(
+                filter.getAge(),
+                filter.getBioSearch(),
+                filter.getLocation(),
+                filter.getGenres(),
+                filter.getInstruments()
+        );
+
+        return profileEntities.stream().map(this::entityToBusinessModel).collect(Collectors.toCollection(ArrayList::new));
+    }
+
+    private ProfileEntity businessModelToEntity(Profile profile) {
+        return new ProfileEntity(
                 profile.getId(),
                 profile.getUsername(),
                 profile.getEmail(),
@@ -35,55 +85,29 @@ public class ProfileService {
                 profile.getBio(),
                 profile.getLocation(),
                 profile.getAvatarUrl(),
-                profile.getGenres().stream().map(it -> new ProfileGenreEntity(profile.getId(), it.name())).toList(),
-                profile.getInstruments().stream().map(it -> new ProfileInstrumentEntity(profile.getId(), it.name())).toList()
+                profile.getGenres().stream().map(it -> new GenreEntity(it.name())).collect(Collectors.toList()),
+                profile.getInstruments().stream().map(it -> new InstrumentEntity(it.name())).collect(Collectors.toList())
+//                null,
+//                null
+//                profile.getGenres().stream().map(it -> new ProfileGenreEntity(profile.getId(), it.name())).toList(),
+//                profile.getInstruments().stream().map(it -> new ProfileInstrumentEntity(profile.getId(), it.name())).toList()
         );
-        var savedProfile = profileRepository.save(entity);
-        return profile;
     }
 
-    public Profile getProfile(UUID id) throws DataException {
-        var entity = profileRepository.findById(id).get();
+    private Profile entityToBusinessModel(ProfileEntity profileEntity) {
         return new Profile(
-                entity.getId(),
-                entity.getUsername(),
-                entity.getEmail(),
-                entity.getName(),
-                entity.getAge(),
-                entity.getBio(),
-                entity.getLocation(),
-                entity.getAvatarUrl(),
-                entity.getGenres().stream().map(it -> Genre.valueOf(it.getGenre())).toList(),
-                entity.getInstruments().stream().map(it -> Instrument.valueOf(it.getInstrument())).toList()
+                profileEntity.getId(),
+                profileEntity.getUsername(),
+                profileEntity.getEmail(),
+                profileEntity.getName(),
+                profileEntity.getAge(),
+                profileEntity.getBio(),
+                profileEntity.getLocation(),
+                profileEntity.getAvatarUrl(),
+//                null,
+//                null
+                profileEntity.getGenres().stream().map(it -> Genre.valueOf(it.getGenre())).collect(Collectors.toCollection(ArrayList::new)),
+                profileEntity.getInstruments().stream().map(it -> Instrument.valueOf(it.getInstrument())).collect(Collectors.toCollection(ArrayList::new))
         );
-    }
-
-    @Transactional
-    public Profile updateProfile(UUID id, Profile profile) {
-//        profileGenreRepository.deleteByProfileIdAndGenreIn(id, profile.getGenres().stream().map(Enum::name).toList());
-//        profileInstrumentRepository.deleteByProfileIdAndInstrumentIn(id, profile.getInstruments().stream().map(Enum::name).toList());
-
-        var entity = profileRepository.findById(id).get();
-//        entity.getGenres().clear();
-//        entity.getInstruments().clear();
-
-//        var genresToSave = profile.getGenres().stream().map(Enum::name).toList();
-//        var genresToDelete = profile.getGenres().stream().map(Enum::name).toList();
-
-        entity.setEmail(profile.getEmail());
-        entity.setName(profile.getName());
-        entity.setAge(profile.getAge());
-        entity.setBio(profile.getBio());
-        entity.setLocation(profile.getLocation());
-        entity.setAvatarUrl(profile.getAvatarUrl());
-        entity.setGenres(profile.getGenres().stream().map(it -> new ProfileGenreEntity(profile.getId(), it.name())).collect(Collectors.toCollection(ArrayList::new)));
-        entity.setInstruments(profile.getInstruments().stream().map(it -> new ProfileInstrumentEntity(profile.getId(), it.name())).collect(Collectors.toCollection(ArrayList::new)));
-//        try{
-        var savedProfile = profileRepository.save(entity);
-//        } catch (Exception e) {
-//            System.out.println(e.getMessage());
-//        }
-
-        return profile;
     }
 }
